--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.4",
+    "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2"
   },
   "devDependencies": {
